Consistent social icon spacing, Telegram support, and documentation updates: - All social icons now have uniform spacing via CSS - Telegram added as a supported contact method - README and config examples updated for Telegram and social username usage - Optional Google Analytics and favicon instructions included - General polish and bugfixes

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -122,6 +122,14 @@ ul {
   margin-left: 1.2em;
 }
 
+.cv-socials a {
+  display: inline-block;
+  vertical-align: middle;
+}
+.cv-socials a:not(:last-child) {
+  margin-right: 0.5em;
+}
+
 @media (max-width: 800px) {
   body {
     margin: 0.5in 0.2in;
